--- a/gather/templates/base_no_login.html
+++ b/gather/templates/base_no_login.html
@@ -45,7 +45,7 @@
 
 {% block foot %} 
       <footer class="pager">
-        <p>&copy; Company 2015.jacsice.forgive me</p>
+        <p>&copy; Company 2015.jacsice.love shan</p>
       </footer>
 {% endblock %} 
 </div> <!-- /container -->
