--- a/gather/templates/notes.html
+++ b/gather/templates/notes.html
@@ -69,7 +69,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <img src='' alt='-_-' style='width:40px;height:40px' class='img-rounded' id="note_url"/>
+        <img src='' alt='加载中...' style='width:40px;height:40px' class='img-rounded' id="note_url"/>
         <span class="text-right" id="note_created"></span>
         <h4 class="modal-title" id="myModalLabel"></h4>
       </div>
@@ -79,7 +79,7 @@
       <div class="modal-footer-note">
       <div class="form-inline">
         <a href="javascript:;"><span class="glyphicon glyphicon-heart heart-left" style="padding:5px;margin-right:50px;" id="heart" value="0"></span></a>
-        <label style="color:#999999;margin-right:50px;">共点击<label id="read_sum">123</label>次</label>
+        <label style="color:#999999;margin-right:50px;">共点击<label id="read_sum">加载中...</label>次</label>
         <input type="text" class="form-control input-md" name="comment" id="comment_content"/>
         <button type="button" class="btn btn-primary" id="say" name="_comment">发表</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
