--- a/gather/templates/share/add_share.html
+++ b/gather/templates/share/add_share.html
@@ -1,20 +1,28 @@
 {% extends 'account/base.html'%}
 {% load staticfiles %}
-{% block title %}<title>Gather-一图一世界</title>{% endblock %}
+{% block title %}<title>Gather-分享</title>{% endblock %}
 {% block pic_li %}class="active"{% endblock %}
 
 {% block main %}
 <div class="no_nav account">
-    <form>
+    <form action="." method="post" enctype="multipart/form-data">
+        {% csrf_token %}
         <div>
             <span class="label label-success">第一步</span>
-            <h3 color="green">上传TA的照片</h3>
-            <input type="file" name="pic"/>  
+            <h3 color="green">分享TA的照片</h3>
+            <input type="file" name="photo"/> 
         </div>
+        
         <div style="margin:10px 0px;padding:20px 0px;">
             <span class="label label-success">第二步</span>
-
-            <h3>书写TA的故事</h3>
+            <h3>分享TA的故事</h3>
+            <div class="row-lg-6">
+                <div class="input-group col-lg-6">
+                  <span class="input-group-addon" id="basic-addon1">标题</span>
+                  <input type="text" class="form-control" placeholder="请输入标题" aria-describedby="basic-addon1" name="title"/>
+                </div>
+            </div>
+            <br/>
             <textarea class="ckeditor" cols="80" id="editor1" name="content" rows="30"></textarea>
         </div>
         
