修复无数据情况下分享的显示，修改help中的底部条栏长度

--- a/gather/templates/help/index.html
+++ b/gather/templates/help/index.html
@@ -26,7 +26,8 @@
         opacity: 0.8;
         padding: 10px;
         position: fixed;
-        width: 100%;
+        width: 60%;
+        margin-left: 20%
     }
     body{
         overflow-y: hidden; 
