添加消息队列用于发送消息通知

--- a/gather/templates/notes.html
+++ b/gather/templates/notes.html
@@ -72,6 +72,9 @@
         <img src='' alt='加载中...' style='width:40px;height:40px' class='img-rounded' id="note_url"/>
         <span class="text-right" id="note_created"></span>
         <h4 class="modal-title" id="myModalLabel"></h4>
+        <div class="text-right" style="position:absolute;margin-left:200px;margin-top:-55px;height:20px;">
+          <button class="btn btn-info btn-sm">特别关心</button>
+        </div>
       </div>
       <div class="modal-body-comment note-scrollable" id="comment-body">
 
