修复note内容过长，special care样式问题

--- a/gather/templates/account/upload_pic.html
+++ b/gather/templates/account/upload_pic.html
@@ -27,6 +27,7 @@
             <input type="file" name="big_photo" value="" id="big"/>
             <input type="hidden" name="crop" id="crop" value=""/>
             <button class="btn btn-primary" type="submit" id="upload">上传</button>
+            <span class="label label-danger">选择图片后, 点击图片截取作为头像的部分</span>
           </form>
         </div>
       </div>
