--- a/gather/templates/share/share_list.html
+++ b/gather/templates/share/share_list.html
@@ -40,9 +40,9 @@
                 <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>再次阅读
               </button>
               {% else %}
-              <button class="btn btn-sm">
+              <!--<button class="btn btn-sm">
                 <span class="glyphicon  glyphicon-remove" aria-hidden="true"></span>不再看
-              </button>
+              </button>-->
               {% endif %}
             </div>
           {% endfor %}
