--- a/gather/templates/help/index.html
+++ b/gather/templates/help/index.html
@@ -52,7 +52,12 @@
     <span class="label label-danger" id="x_bottom"></span><br/>
     <span class="label label-danger" id="y_bottom"></span>
     </div>
-    <button class="btn btn-success" style="margin-right:150px;" data-toggle="modal" data-target="#myModal" id="help_btn">发布求助</button>
+    {% if request.user.is_authenticated %}
+    <button class="btn btn-success" style="margin-right:150px;" data-toggle="modal" data-target="#myModal" id="help_btn" disabled>点击要拜托的位置</button>
+    {% else %}
+    <button class="btn btn-danger" style="margin-right:150px;" disabled>请先登录</button>
+    {% endif %}
+
  </div>
 
 <!-- 添加拜托信息 -->
@@ -79,7 +84,7 @@
               </div>
               <div class="form-group">
                 <label>失效日期</label>
-                <input type="text" class="form-control" placeholder="空则为长期有效" name="cancel_time"/>
+                <input type="text" class="form-control" placeholder="空则为长期有效,格式为2015-01-01" name="cancel_time"/>
               </div>
               <div class="form-group">
                 <label>联系方式</label>
@@ -106,7 +111,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <button type="button" class="close close_btn" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="myModalLabel">拜托拜托~</h4>
         <span class="label label-default" id="help_longitude"></span>
         <span class="label label-default" id="help_latitude"></span>
@@ -132,7 +137,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-info" data-dismiss="modal">去帮助</button>
-        <button type="button" class="btn btn-default" data-dismiss="modal" class="close">关闭</button>
+        <button type="button" class="btn btn-default close_btn" data-dismiss="modal">关闭</button>
       </div>
     </div>
   </div>
@@ -231,6 +236,9 @@
 
         $("#x_bottom").html("经度" + e.point.lng)
         $("#y_bottom").html("维度" + e.point.lat)
+
+        $("#help_btn").removeAttr('disabled');
+        $("#help_btn").html('发起拜托');
     }
     map.addEventListener("click", showInfo);
 
@@ -290,7 +298,7 @@
     /* 
      * bootstrap modal 关闭按钮, 隐藏modal
      */
-     $(".class").click(function(){
+     $(".close_btn").click(function(){
         $(".modal").removeClass('show').addClass('fade');
      });
 
