--- a/gather/static/styles/my_article.css
+++ b/gather/static/styles/my_article.css
@@ -15,7 +15,14 @@
     border: 1px solid #CCC;
     margin: 20px auto;
     position: relative;
-    padding: 20px 10px 10px;
+    padding: 0px 10px 10px;
+    width: 85%;
+}
+
+.title{
+    text-transform: none;
+    text-decoration: none;
+    color: white;
 }
 
 .noise {
