--- a/gather/templates/account/index.html
+++ b/gather/templates/account/index.html
@@ -23,11 +23,11 @@
       -->
 
       <!-- 开发日志 -->
-      {% for log in logs %}
+      {% for shout in shouts %}
       <div class="bs-callout bs-callout-info">
-        <span class="label label-success" target="_blank">{{ log.created|date:'Y-m-d H:i:s' }}</span> 
+        <span class="label label-success" target="_blank">{{ shout.created|date:'Y-m-d H:i:s' }}</span> 
         &nbsp;&nbsp;&nbsp;
-        {{ log.content }}
+        {{ shout.title }}
       </div>
 
       {% endfor %}
