--- a/gather/templates/base.html
+++ b/gather/templates/base.html
@@ -39,8 +39,8 @@
               </button>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="{% url 'account' %}">我的账户</a></li>
-                <li><a href="{% url 'bookmark' %}">收藏夹</a></li>
-                <li><a href="{% url 'add_share' %}">分享点滴</a></li>
+                <li><a href="{% url 'bookmark' %}">我的收藏夹</a></li>
+                <li><a href="{% url 'article' %}">我的分享</a></li>
                 <li><a href="{% url 'import_bookmark' %}">导入书签</a></li>
                 <li><a href="{% url 'head_pic_big' %}">上传头像</a></li>
                 <li class="divider"></li>
