--- a/gather/templates/base.html
+++ b/gather/templates/base.html
@@ -28,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><label style="color:white">jacsice</label></a>
+          <a class="navbar-brand" href="/"><label style="color:white">GATHER</label></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           {% if request.user.is_authenticated %}
