--- a/gather/templates/chat/chat.html
+++ b/gather/templates/chat/chat.html
@@ -81,6 +81,7 @@
                     /*var new_word_html = "<li class='mar-btm'><div class='media-right'><img src='{{ static_url('img/av1.png') }}' class='img-circle img-sm' alt='Profile Picture'></div><div class='media-body pad-hor speech-right'><div class='speech'><a href='#' class='media-heading'>John Doe</a><p>"+ $('#word').val() +"</p><p class='speech-time'><i class='fa fa-clock-o fa-fw'></i>09:23AM</p></div></div></li>";
                     $('#conversation li:last-child').after(new_word_html);*/
                     $(event.target).removeAttr('disabled');
+                    $("#word").attr("");
                 }
             });
         });
