--- a/gather/templates/share/add_share.html
+++ b/gather/templates/share/add_share.html
@@ -21,18 +21,25 @@
                   <span class="input-group-addon" id="basic-addon1">标题</span>
                   <input type="text" class="form-control" placeholder="请输入标题" aria-describedby="basic-addon1" name="title"/>
                 </div>
+                <span class="label label-danger">只填图片和标题发表到图片墙</span>
             </div>
             <br/>
             <textarea class="ckeditor" cols="80" id="editor1" name="content" rows="30"></textarea>
         </div>
         
         <div class="text-left" style="margin-top:20px;margin-right:50px;">
-            <button type="submit" class="btn btn-danger btn-lg">提交</button>
+            <button type="submit" class="btn btn-danger btn-lg" id="add_share">提交</button>
         </div>
     </form>
 </div>
 {% endblock %}
 
 {% block extra_js %}
+<script type="text/javascript">
+    $("#add_share").click(function(){
+        $(this).html("上传中...");
+        $("form").submit();
+    })
+</script>
 <script src="{% static 'ckeditor/ckeditor.js' %}"></script>
 {% endblock %}
