--- a/gather/templates/index.html
+++ b/gather/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%}
 {% load staticfiles %}
 {% block title %}
-<title>jacsice-聚</title>
+<title>gather-聚</title>
 {% endblock %}
 
 {% block extra_css%}
