--- a/gather/templates/share/share_list.html
+++ b/gather/templates/share/share_list.html
@@ -27,7 +27,7 @@
           {% for share in shares %}
             <div class="col-md-10" >
               <div class="blog-post">
-                <h2 class="blog-post-title"><a href="{% url 'detail_share' share.id %}">{{ share.title }}</a></h2>
+                <h2 class="blog-post-title"><a href="{% url 'detail_share' share.id %}">{{ share.short }}</a></h2>
                 <p class="blog-post-meta">{{ share.created|date:'Y-m-d H:i:s' }} by <a href="#">{{ share.user.username }}</a></p>
                 {% if share.can_show_desc %}
                 <p>{{ share.content|slice:'200'|safe }}</p>
@@ -80,18 +80,9 @@
           <div class="sidebar-module">
             <h4>浏览最多</h4>
             <ol class="list-unstyled">
-              <li><a href="#">March 2014</a></li>
-              <li><a href="#">February 2014</a></li>
-              <li><a href="#">January 2014</a></li>
-              <li><a href="#">December 2013</a></li>
-              <li><a href="#">November 2013</a></li>
-              <li><a href="#">October 2013</a></li>
-              <li><a href="#">September 2013</a></li>
-              <li><a href="#">August 2013</a></li>
-              <li><a href="#">July 2013</a></li>
-              <li><a href="#">June 2013</a></li>
-              <li><a href="#">May 2013</a></li>
-              <li><a href="#">April 2013</a></li>
+              {% for max in clickes_maxs %}
+              <li><a href="{% url 'detail_share' max.id %}">{{ max.short }}&nbsp;&nbsp;&nbsp;{{ max.read_sum }}次</a></li>
+              {% endfor %}
             </ol>
           </div>
           <div class="sidebar-module">
