照片title展示规则修改

--- a/gather/templates/share/photo_wall.html
+++ b/gather/templates/share/photo_wall.html
@@ -19,7 +19,7 @@
                         <li>
                             <figure>
                                 <img src="/media/{{ wall.photo }}" alt="加载中..."/>
-                                <figcaption><p>{{ wall.image_short }}</p></figcaption>
+                                <figcaption><p>{{ wall.title }}</p></figcaption>
                             </figure>
                         </li>
                         {% endfor %}
