--- a/gather/templates/base.html
+++ b/gather/templates/base.html
@@ -19,7 +19,11 @@
 </head>
 <body>
 {% block header %} 
+    {% if request.user.is_authenticated %}
+    <nav class="navbar navbar-inverse navbar-static-top" role="navigation" style="background-color:#428bca;margin-top:-50px;border-color:white">
+    {% else %}
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color:#428bca">
+    {% endif %}
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
