--- a/gather/templates/share/photo_wall.html
+++ b/gather/templates/share/photo_wall.html
@@ -34,7 +34,7 @@
                                 <figcaption>
                                     <p>{{ wall.title }}</p>
                                 </figcaption>
-                                <img src="/media/{{ wall.photo_url }}" alt="加载中..." style="width:{{ wall.ysize }}px;height:{{ wall.xsize }}px"/>
+                                <img src="{{ wall.photo_url }}" alt="加载中..." style="width:{{ wall.ysize }}px;height:{{ wall.xsize }}px"/>
                             </figure>
                             {% else %}
                             <figure {% if wall.is_scroll %}style="overflow-y:auto;"{% endif %}>
