图片数据迁移到七牛

--- a/gather/templates/share/photo_wall.html
+++ b/gather/templates/share/photo_wall.html
@@ -41,7 +41,7 @@
                                 <figcaption>
                                     <p>{{ wall.title }}</p>
                                 </figcaption>
-                                <img src="/media/{{ wall.photo }}" alt="加载中..."/>
+                                <img src="{{ wall.photo_url }}" alt="加载中..."/>
                             </figure>
                             {% endif %}
                         </li>
